[package]
name = "store"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["std", "v4"] }
type-uuid = { version = "0.1.2", optional = true }
derive_more = "0.99"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
untyped = ["type-uuid"]